--- a/README
+++ b/README
@@ -1,3 +1,4 @@
-This project is seriously awesome, guys.
+This project is seriously awesome, guys. 
+This is a new line of code.
 
 This project will help treehouse students learn about working with git repository.
