Talked about how awesome the treehouse students are

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
 This project is seriously awesome, guys. 
 This is a new line of code.
 
-This project will help treehouse students learn about working with git repository.
+This project will help all the totally awesome treehouse students learn about working with git repository.
