--- a/README
+++ b/README
@@ -1,4 +1,6 @@
 This project is seriously awesome, guys. 
 This is a new line of code.
 
+I hope this is right. 
+
 This project will help treehouse students learn about working with git repository.
